--- a/index.html
+++ b/index.html
@@ -8,12 +8,16 @@
 </head>
 
 <body>
+        <span class="go-up"></span>
     <div class="main-wrapper">
     <header>
         <nav class="main-nav">
-            <a class="main-nav__logo">
-                <img src="source/img/logo4.png"  height="70">
-            </a>
+            <div class="main-nav__logo-button">
+                <a class="main-nav__logo">
+                   <img src="source/img/logo41.png"  height="70">
+                </a>
+                <button class="main-nav__open-close"></button>
+            </div>
             <div class="main-nav__site-basket">
             <ul class="main-nav__site-list site-list">
                 <li class="site-list__item">
@@ -24,6 +28,7 @@
                     <ul class="site-list__item-submenu submenu">
                         <li class="submenu__item"><a href="">мыло</a></li>
                         <li class="submenu__item"><a href="">бальзам</a></li>
+                        <li class="submenu__item"><a href="">наборы</a></li>
                     </ul>
                 </li>
                 <li class="site-list__item">
@@ -87,13 +92,14 @@
     </header>
 
         <section class="welcome">
+            <div class="welcome__flower"></div>
             <h1 class="welcome__note">
-                <span>Интернет-магазин</span>
-                <span>ручной работы</span>
-                <span>мыло</span>
-                <span>скрабы</span>
-                <span>бальзамы для губ</span>
-            
+                <span class="welcome__note-item">Интернет-магазин</span>
+                <span class="welcome__note-item">ручной работы</span>
+                <span class="welcome__note-item">бальзамы для губ</span>
+                <span class="welcome__note-item">масла для тела</span>
+                <span class="welcome__note-item">мыло</span>
+                <span class="welcome__note-item">скрабы</span>
             </h1>
             <a href="#catalog" class="welcome__button" >перейти в каталог</a>
         </section>
@@ -109,12 +115,17 @@
                 <ul class="new__list">
                     <li class="new__item">
                         <img class="new__item-img" src="source/img/example.jpg" width="200">  
-                        <span class="novelty">
-                                новинка
-                        </span>
                         <h4 class="new__item-title">
                             Мыло кофейное
                         </h4>
+                        <div class="catalog__item-number number">
+                            <button class="number__less">-</button>
+                            <form class="number__form"> 
+                                <input type="number">
+                            </form>
+                            <button class="number__more">+</button>
+                            <p class="number__description">10 шт. в наличии</p>
+                        </div>
                         <button class="new__item-more">
                             подробнее
                         </button>
@@ -124,12 +135,17 @@
                     </li>
                     <li class="new__item">
                         <img src="source/img/example.jpg" width="200">
-                        <span class="novelty">
-                                новинка
-                        </span>
                         <h4 class="new__item-title">
                             Мыло банное
                         </h4>
+                        <div class="catalog__item-number number">
+                            <button class="number__less">-</button>
+                            <form class="number__form"> 
+                                <input type="number">
+                            </form>
+                            <button class="number__more">+</button>
+                            <p class="number__description">10 шт. в наличии</p>
+                        </div>
                         <button class="new__item-more">
                             подробнее
                         </button>
@@ -142,6 +158,14 @@
                         <h4 class="new__item-title">
                             Мыло морское
                         </h4>
+                        <div class="catalog__item-number number">
+                            <button class="number__less">-</button>
+                            <form class="number__form"> 
+                                <input type="number">
+                            </form>
+                            <button class="number__more">+</button>
+                            <p class="number__description">10 шт. в наличии</p>
+                        </div>
                         <button class="new__item-more">
                             подробнее
                         </button>
@@ -151,12 +175,17 @@
                     </li>
                     <li class="new__item">
                         <img src="source/img/example.jpg" width="200">
-                        <span class="novelty">
-                                новинка
-                        </span>
                         <h4 class="new__item-title">
                             Мыло
                         </h4>
+                        <div class="catalog__item-number number">
+                            <button class="number__less">-</button>
+                            <form class="number__form"> 
+                                <input type="number">
+                            </form>
+                            <button class="number__more">+</button>
+                            <p class="number__description">10 шт. в наличии</p>
+                        </div>
                         <button class="new__item-more">
                             подробнее
                         </button>
@@ -169,6 +198,14 @@
                         <h4 class="new__item-title">
                             Мыло какое-то
                         </h4>
+                        <div class="catalog__item-number number">
+                            <button class="number__less">-</button>
+                            <form class="number__form"> 
+                                <input type="number">
+                            </form>
+                            <button class="number__more">+</button>
+                            <p class="number__description">10 шт. в наличии</p>
+                        </div>
                         <button class="new__item-more">
                             подробнее
                         </button>
@@ -181,6 +218,14 @@
                         <h4 class="new__item-title">
                             Мыло какое-то
                         </h4>
+                        <div class="catalog__item-number number">
+                            <button class="number__less">-</button>
+                            <form class="number__form"> 
+                                <input type="number">
+                            </form>
+                            <button class="number__more">+</button>
+                            <p class="number__description">10 шт. в наличии</p>
+                        </div>
                         <button class="new__item-more">
                             подробнее
                         </button>
@@ -237,6 +282,14 @@
                         <h4 class="catalog__item-title">
                             Мыло какое-то
                         </h4>
+                        <div class="catalog__item-number number">
+                            <button class="number__less">-</button>
+                            <form class="number__form"> 
+                                <input type="number">
+                            </form>
+                            <button class="number__more">+</button>
+                            <p class="number__description">10 шт. в наличии</p>
+                        </div>
                         <button class="catalog__item-more">
                             подробнее
                         </button>
@@ -249,6 +302,14 @@
                         <h4 class="catalog__item-title">
                             Мыло какое-то
                         </h4>
+                        <div class="catalog__item-number number">
+                            <button class="number__less">-</button>
+                            <form class="number__form"> 
+                                <input type="number">
+                            </form>
+                            <button class="number__more">+</button>
+                            <p class="number__description">10 шт. в наличии</p>
+                        </div>
                         <button class="catalog__item-more">
                             подробнее
                         </button>
@@ -261,6 +322,14 @@
                         <h4 class="catalog__item-title">
                             Мыло какое-то
                         </h4>
+                        <div class="catalog__item-number number">
+                            <button class="number__less">-</button>
+                            <form class="number__form"> 
+                                <input type="number">
+                            </form>
+                            <button class="number__more">+</button>
+                            <p class="number__description">10 шт. в наличии</p>
+                        </div>
                         <button class="catalog__item-more">
                             подробнее
                         </button>
@@ -273,6 +342,14 @@
                         <h4 class="catalog__item-title">
                             Мыло какое-то
                         </h4>
+                        <div class="catalog__item-number number">
+                            <button class="number__less">-</button>
+                            <form class="number__form"> 
+                                <input type="number">
+                            </form>
+                            <button class="number__more">+</button>
+                            <p class="number__description">10 шт. в наличии</p>
+                        </div>
                         <button class="catalog__item-more">
                             подробнее
                         </button>
