Разработка адаптивной части сайта

--- a/index.html
+++ b/index.html
@@ -112,6 +112,7 @@
                 <div class="new__wrapper">
                 <label class="button-left"><button class="new__button-left visually-hidden">
                     </button></label>
+                <div class="new__wrap">
                 <ul class="new__list">
                     <li class="new__item">
                         <img class="new__item-img" src="source/img/example.jpg" width="200">  
@@ -234,7 +235,8 @@
                         </button>
                     </li>
                 </ul>
-                <label class="button-right"><button class="new__button-right visually-hidden">
+            </div>
+                <label class="button-right"><button class="new__button-right">
                     </button></label>
             </div>
         </section>
@@ -405,5 +407,6 @@
 
         </section>
     </div>
+    <script src="source/main.js"></script>
     </body>
 </html>
